    is enabled together with the realtime synchronization, the RTC runs
    at realtime speed.

- I/O Devices
  - Networking
    - Ported Intel(R) 82540EM Gigabit Ethernet adapter emulation from Qemu,
      to enable configure with option --enable-e1000
    - Added PCI network boot ROM support to all network adapters
  - PCI
    - added "auto-assign to PCI slot" feature for PCI-only devices
  - VGA
    - Major rewrite of the vga / cirrus code:
      - vgacore (shared standard VGA emulation code)
      - vga (Bochs VBE and PCI VGA)
      - cirrus (CL-GD 5430 ISA / CL-GD 5446 PCI)
    - Added VGA graphics blinking support
    - More accurate vertical and horizontal retrace emulation
      (based on the DOSBox implementation)
  - Sound
    - implemented PC speaker beep using the lowlevel sound interface
    - added SDL audio output support

- ROM BIOS
  - improved PCI boot ROM support (for VGA and other devices)
  - added MADT entry for Interrupt Source Override to ACPI tables

- GUI and display libraries
  - implemented "auto-off" timer for status LEDs indicating a data transfer
  - Implemented "hideIPS" option in sdl and wx libraries
  - Added support for sending absolute mouse position values from the gui if an
    absolute pointing device (USB tablet) is active (rfb, sdl, win32, wx, x).
  - Gui debugger now supported when using sdl gui on Windows

- Config interface
  - Added support for direct device plugin loading with bochsrc directive for
    devices which have the same name for the plugin and config option.
  - The bochsrc option 'plugin_ctrl' can now be used to load/unload optional
    plugins directly when parsing the config file or command line. See the bochsrc
    sample for supported devices.
  - Moved bochsrc parsing / writing and config parameter handling for networking,
    sound and USB devices to the plugin device code. The options are only
    available when the corresponding plugin device is loaded.